[package]
authors = ['BEAM devs <https://github.com/BeamMW>']
description = 'FRAME pallet template for processing Beam block headers.'
edition = '2018'
homepage = 'https://beam.mw'
license = 'Unlicense'
name = 'pallet-beam-block-processor'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }

#libsecp256k1 = { default-features = false, version = '0.3.5' }
sha2 = { default-features = false, version = '0.9.2' }
blake2b_simd = { default-features = false, version = '0.5.11' }
sp-core = { default-features = false, version = '2.0.0' }
bytes = { default-features = false, version = '0.6.0' }

[dependencies.siphasher]
default-features = false
git = "https://github.com/sept-en/rust-siphash"
#path = "../../../beam-rust-siphash"

[dev-dependencies]
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
